# wireframe-rs

./: Cargo.toml  README  README.md  imgui.ini
assets/: suzanne.fbx
shaders/: default.frag  default.geom  default.vert  default_wireframe.frag  imgui.frag  imgui.vert  wireframe.frag
src/: default.frag  default.geom  default.vert  device.rs  imgui_gl.rs  main.rs  pipeline.rs
src/device/: mod.rs
src/device/opengl/: mod.rs
