[package]
name = "wireframe-rs"
version = "0.1.0"
authors = ["Jonathan Steyfkens <jonathansty@users.noreply.github.com>"]
edition = "2018"

[dependencies]
time = "*"
gl = "0.6"

[dependencies.sdl2]
version = "0.32"
features = ["bundled", "static-link"]

[dependencies.assimp]
version= "0.3.1"

[dependencies.nalgebra]
version = "0.16"
