[package]
name = "wireframe"
version = "0.1.0"
authors = ["Jonathan Steyfkens <jonathansty@users.noreply.github.com>"]
edition = "2018"

[dependencies]
time = "*"
regex="*"
gl = "0.6"
imgui = "0.0.21"

[dependencies.sdl2]
version = "0.32"
# features = ["bundled"]

[dependencies.assimp]
version= "0.3.1"

[dependencies.nalgebra-glm]
version = "0.1"
